src/objects/CustomStoreGroup__c.object
<CustomObject>
    <fields>
        <fullName>Account_External_Id_Aperity__c</fullName>
        <externalId>true</externalId>
        <label>Account External Id Aperity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom Store Groups</relationshipLabel>
        <relationshipName>CustomStoreGroup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Added_Date__c</fullName>
        <label>Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomStoreGroupID__c</fullName>
        <externalId>true</externalId>
        <label>Custom Store Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Custom Store Group</relationshipLabel>
        <relationshipName>CustomStoreGroup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StoreID__c</fullName>
        <externalId>true</externalId>
        <label>Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeID__c</fullName>
        <label>Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Store Group</label>
    <nameField>
        <label>Custom Store Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Store Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>